@@ -118,7 +118,7 @@
 <entry key="48_defMinValue">0.0</entry>
 <entry key="43_isStartpointZero">false</entry>
 <entry key="42_defMinValue">0.0</entry>
-<entry key="RecordSet_smoothVoltageCurve">true</entry>
+<entry key="RecordSet_smoothVoltageCurve">false</entry>
 <entry key="1_color">0,0,255</entry>
 <entry key="15_lineStyle">1</entry>
 <entry key="24_isVisible">true</entry>
