@@ -7,6 +7,7 @@ Generic changes/fixes
 	* update copyright to 2019
 	* update all http URLs to https if possible
 	* update jaxb jars and remove disabling of optimization statement
+	* remove/reset unnecessary smoothVoltageCurve entry from devices
 
 Device specific changes/fixes
 	* Polaron* - adapt number of transfered bytes to latest specification (Firmware 2.x required)
